app/assets/stylesheets/pages.css.scss
$bg: #fff;
$font: #000;
$red: #c11924;
$gray: #464646;
$lightgray: #dedede;
$white: #FFFFFF;
$yellow: #fdc702;

body {
    font-family: 'Arimo', sans-serif;
    background:url(bg2.png) no-repeat fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#header {
  margin:40px 0 10px 0;
}

/* Navigation */
/* ---------------------------------- */

#toplevel {
  position:relative;
  top:-30px;
  float:right;
  font-family:'Arimo', sans-serif;
  font-size:14px;
}

#toplevel a {
  color:$gray;
}

#toplevel img {
  width:25px;
  height:25px;
}

.nav-pills {
  position:relative;
}

#menu {
  position:relative;
  right:-138px;
}

#menu li {
    width:106px;
    height:45px;
    font-weight: bold;
    text-align: center;
    background-position:0px 0px;
}

#menu li a {
    display:block;
    height:24px;
}

#menu li a:hover {
    background:none;
}

#menu li:hover {
    background-position:0px -45px;
}

#home {
    background:url('nav_home_sprite.png') top left no-repeat;
}

#play {
    background:url('nav_game_sprite.png') top left no-repeat;
}
#build {
    background:url('nav_create_sprite.png') top left no-repeat;
}
#paint {
    background:url('nav_paint_sprite.png') top left no-repeat;
}
#logo {
    position:absolute;
    top:0px;
    left:0px;
}
h1 {  margin:0;  padding:0; font-size:2.2em; font-family: 'LaconicRegular', Arial, sans-serif; }

#flash-template {
  display:none;
}

/* Feedback */
#feedback {
  z-index:999;
  position:absolute;
  display: none;
  box-shadow:2px 2px 2px #666;
}

#feedbackSideButton {
  padding:8px;
  border:1px solid #CCC;
  background:#FFF;
  position:absolute;
  left:0; top:30%;
  cursor:pointer;
}
#feedbackSideButton:hover {background:#F6F6F6;}
.errorForm { border:1px solid #B94A48;}

/* game/id/play */
#tempComment {  display: none; }
.comment {
  margin-bottom:2em;
  padding-bottom:5px;
  border-bottom:1px solid #F6F6F6;
}

.layer, #game-li-template {
  display: none;
}

/* General */
/* ---------------------------------- */
@font-face {
    font-family: 'LaconicBold';
    src: url('Laconic_Bold-webfont.eot');
    src: url('Laconic_Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('Laconic_Bold-webfont.woff') format('woff'),
         url('Laconic_Bold-webfont.ttf') format('truetype'),
         url('Laconic_Bold-webfont.svg#LaconicBold') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'LaconicRegular';
    src: url('Laconic_Regular-webfont.eot');
    src: url('Laconic_Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('Laconic_Regular-webfont.woff') format('woff'),
         url('Laconic_Regular-webfont.ttf') format('truetype'),
         url('Laconic_Regular-webfont.svg#LaconicBold') format('svg');
    font-weight: normal;
    font-style: normal;
}

.banner { /* Profile/Games etc Banner */
  position:absolute;
  top:-15px;
  z-index:1;
  width:91px;
  height:49px;
  font: 18px 'LaconicBold', Arial, sans-serif;
  color:$white;
  padding:15px 0 0 13px;
}

.banner img {
  position:absolute;
  top:0px;
  left:0px;
  width:91px;
  height:49px;
  z-index:-1;
}

.add { /* add Game/Graphic Buttons */
  background:url('add_button_bg.png') top right no-repeat;
  font-family: 'Arimo', sans-serif;
  height:24px;
  display:block;
  margin:30px 0px 16px 30px;
  padding:6px 0 0 14px;
  border-left:1px solid #dedede;
  color: $gray;
  letter-spacing:1px;
  float:left;
}

.add:hover {
  background:url('add_button_bg_hover.png') top right no-repeat;
  text-decoration:none;
  font-weight:bold;
  color: $gray;
  letter-spacing:0px;
}

.addgame {
  width:110px;
}

.addgraphic {
  width:120px;
  float:left;
}

.viewall {
  background:url('view_all_button.png') top right no-repeat;
  width:98px;
}

.viewall:hover {
  background:url('view_all_button_hover.png') top right no-repeat;
}

.collection_container { /* UL with bar containing sliders/info and list items (Games/Graphics) */
  position:relative;
  width:720px;
  min-height:269px;
  background:#fff;
  list-style:none;
  margin:0px 0px 30px 0px;
}

.collection_container .bar {
  background:#e9e9e9;
  height:30px;
  font-family: 'Arimo', sans-serif;
  font-weight:bold;
  color:$gray;
}

.collection_container .bar .description {
  height:30px;
  width:624px;
  float:left;
  margin:6px 0 0 38px;
}

.collection_container .bar .slider_left {
  position:absolute;
  left:0px;
}

.collection_container .bar .counter {
  float:left;
  margin: 6px 14px 0 0;
}

.collection_container .bar .slider_right {
  position:absolute;
  right:0px;
}

.collection_container .games {
  margin: 0 0 0 30px;
}

.collection_container .games .game { /* Game 'Button' with hover, containing info etc... */
  position:relative;
  width:210px;
  height:135px;
  margin:0 20px 20px 0;
  overflow:hidden;
}

.collection_container .games .game .meta, .collection_container .graphic .meta {
  position:absolute;
  top:0px;
  right:0px;
  height:30px;
  width:30px;
  z-index:5;
  padding:0px;
  overflow:hidden;
}

.collection_container .games .game .meta:hover, .collection_container .graphic:hover .meta {
  height:60px;
  cursor:hand;
}

.collection_container .games .game .meta a {
  display:block;
}

.collection_container .games .game .overlay p {
  height:52px;
}

.collection_container .games .game a, .collection_container .graphic a {
  color:$red;
}

.collection_container .games .game a:hover, .collection_container .graphic a:hover {
  color:$red;
  text-decoration:none;
}

.collection_container .games .game .overlay img, .collection_container .games .game .overlay p, .collection_container .graphic .overlay p {
  position:absolute;
  top:135px;
  left:0px;
  width:198px;
  padding:12px 0 0 12px;
  opacity:0;
  display:block;
  font: 14px 'LaconicBold', Arial, sans-serif;
  color:$red;
}

.collection_container .games .game .overlay p, .collection_container .graphic .overlay p {
  background:url('/assets/overlay_game_text.png') top left no-repeat;
}

.collection_container .games .game .overlay p span, .collection_container .graphic .overlay p span {
  color:$gray;
  font-size:12px;
  font-family:'Arimo', sans-serif;
}

.collection_container .graphic .overlay p {
  width:116px;
}

.collection_container .games .game:hover .overlay p, .collection_container .graphic:hover .overlay p {
  -webkit-transform: translateY(-53px);
  -moz-transform: translateY(-53px);
  -o-transform: translateY(-53px);
  -ms-transform: translateY(-53px);
  transform: translateY(-53px);
  -ms-filter: "progid: DYImageTransform.Microsoft.Alpha(Opacity=1)";
  filter: alpha(opacity=1);
  opacity: 1;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  translateYtransition: all 0.3s ease-in-out;
}

.collection_container .games .game:hover .overlay img {
  -webkit-transform: translateY(-128px);
  -moz-transform: translateY(-128px);
  -o-transform: translateY(-128px);
  -ms-transform: translateY(-128px);
  transform: translateY(-128px);
  -ms-filter: "progid: DYImageTransform.Microsoft.Alpha(Opacity=1)";
  filter: alpha(opacity=1);
  opacity: 1;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  translateYtransition: all 0.2s ease-in-out;
}

.collection_container .graphic:hover .overlay p {
  -webkit-transform: translateY(-50px);
  -moz-transform: translateY(-50px);
  -o-transform: translateY(-50px);
  -ms-transform: translateY(-50px);
  transform: translateY(-50px);
}

.sortables {
  position:absolute;
  right:30px;
  top:65px;
  width:489px;
}

.sortables a {
  font: 13px 'Arimo', sans-serif;
  color: $gray;
  margin:3px 3px 0 3px;
}

.sortables a:hover {
  font: 13px 'Arimo';
  font-weight:bold;
  color:$yellow;
}

.sortables .sort {
  position:relative;
  float:left;
  margin:5px 0 0 0;
}

.sortables .search {
  position:absolute;
  right:0px;
}

.sortables .search input[type=text] {
  border:1px solid $lightgray;
  border-right:none;
  border-radius:0px;
}

.sortables .search input[type=submit] {
  position:relative;
  border:1px solid $lightgray;
  border-left:1px solid $lightgray;
  border-radius:0px;
  background:url('/assets/searchbox.png');
  width:30px;
  height:30px;
  left:-5px;
}

/* Home */
/* ---------------------------------- */
.main_banner {
  position:relative;
  font-family:'Arimo', sans-serif;
  background:$gray;
  color:$white;
  border-radius:0px;
  width:882px;
  height:278px;
  padding:55px 30px 0 30px;
}

.main_banner p {
  font-size:16px;
}

.landing_page, .latest_games {
  position:relative;
}

.landing_page .banner {
  padding:15px 0 0 8px;
  width:100px;
  text-transform:uppercase;
}

.landing_page h1 {
  font-family:'Arimo', sans-serif;
  font-weight:bold;
  font-size:22px;
}

.landing_page .how {
  font-size:13px;
}

.landing_page .howto {
  width:39px;
  margin: 0 20px 5px 0;
}

.landing_page span {
  font-size:14px;
  font-variant:italic;
}

.landing_page #start_button {
  position:absolute;
  top:260px;
  left:625px;
}

.latest_games {
  margin: 45px 0 0 0;
}

.latest_games .collection_container {
  float:left;
  width:540px;
  height:345px;
  padding:60px 0 0 30px;
  margin:0 30px 0 0;
}

.latest_games .banner, .latest_games .banner img {
  width:150px;
}

.latest_games .banner {
  margin:0 0 0 30px;
}

.latest_games .collection_container .bar, .latest_games .collection_container .add, .latest_games .collection_container .sortables {
  display:none;
}

/* Login */
/* ---------------------------------- */

.latest_games .login {
  float:left;
  width:280px;
  border-radius:0px;
  background:$white;
  padding:60px 0 0 0;
}

.latest_games .login .banner, .latest_games .login .banner img {
  width:80px;
}

.latest_games .login .form {
  padding:0 0 0 30px;
}

.latest_games .login input {
  border-radius:0px;
}

.latest_games .login .btn {
  float:left;
  border-radius:0px;
  margin:0 25px 0 0;
}

.latest_games .login .checkbox,  .latest_games .login input[type=checkbox]{
  float:left;
  padding:0 3px 0 0;
}

.latest_games .login a img {
  margin:10px 0 0 0;
}

/* Profile */
/* ---------------------------------- */

#profile {
  position:relative;
}

#profilewrap {
  height: 180px;
  width:180px;
  overflow: hidden;
  background:$white;
}

#profileimage {
  position:relative;
  left:0px;
  width:180px;
}

#profile .name {
  font: 14px 'LaconicBold', Arial, sans-serif;
  height:21px;
  width:135px;
  float:left;
  background:#fff;
  padding:9px 0 0 15px;
}

#profile .edit {
  width:30px;
  height:30px;
  float:left;
}

#profile .metaprofile {
  height:82px;
  width:180px;
  background:#fff;
}

#profile .metaprofile p {
  font-family: 'Arimo', sans-serif;
  font-weight:bold;
  font-size:12px;
  color:$gray;
  margin: 0 0 0 15px;
}

#profile .metaprofile p span {
  font-family: 'Arimo', sans-serif;
  font-weight:normal;
  font-size:12px;
  color:$gray;
}

#profile .sort {
  float:left;
  margin: 30px 0 0 0;
}

#profile #user_graphics #graphics {
  margin:0 0 0 30px;
}

#profile #user_graphics .graphic {
  position:relative;
  width:128px;
  height:128px;
  border: 1px solid #e9e9e9;
  overflow:hidden;
  margin:0 20px 20px 0;
}

#profile #user_graphics .graphic:hover {
  border: 1px solid $gray;
}

/* Gallery */
/* ---------------------------------- */

#gallery {
  position:relative;
  background:$white;
  width:960px;
}

#gallery .banner {
  margin: 0 0 0 40px;
}

#gallery .collection_container {
  position:relative;
  width:945px;
  top:50px;
  margin:0 0 0 15px;
}

#gallery .games {
  margin:85px 0 0 15px;
}

.frame_graphic {
  border:1px solid #AAA;
  background-repeat:no-repeat fixed;
/*  background-size:120px 120px;*/
}

.share_button { display: inline;}

